--- a/estilo.css
+++ b/estilo.css
@@ -21,7 +21,7 @@ body{
 .titulo{
   width: 100%;
   height: 10%;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   font-size: 5vw;
   color:#FA4EAB;
 }
@@ -76,17 +76,17 @@ animation: animacion 15s linear infinite;
 
 .template{
   width: 100%;
-  height: 100%;
+  height: 90%;
   padding-left: 10px;
   padding-right: 10px;
   
 }
 .template p{
-  font-size: 7vw;
+  font-size: 6.5vw;
   text-align:center;
   color: #323232;
-  line-height: 55px;
-  margin-top: -120px;
+  line-height: 30px;
+  margin-top: -11%px;
 }
 .btnIZ{
   color: #FA4EAB;
@@ -98,12 +98,9 @@ animation: animacion 15s linear infinite;
   font-size:10vw;
   text-align: center;
   position: absolute;
-  bottom: 5vw;
+  bottom: 15vw;
 }
-video{
-  width: 100%;
-  height:auto;
-}
+
 .none{
   visibility: hidden;
 }
