--- a/estilo.css
+++ b/estilo.css
@@ -82,12 +82,15 @@ animation: animacion 15s linear infinite;
   padding-left: 10px;
   padding-right: 10px;
   
+  
 }
 .template p{
   font-size: 6.5vw;
   text-align:center;
   color: #323232;
-  margin-top: -11%px;
+  line-height: 15vw;
+ 
+
 }
 .btnIZ{
   color: #FA4EAB;
@@ -99,7 +102,7 @@ animation: animacion 15s linear infinite;
   font-size:10vw;
   text-align: center;
   position: absolute;
-  bottom: 15vw;
+  bottom: 17vw;
 }
 
 .none{
