--- a/estilo.css
+++ b/estilo.css
@@ -96,6 +96,7 @@ animation: animacion 15s linear infinite;
   font-size: 5vw;
   text-align:center;
   color: #575151;
+  letter-spacing:5px ;
   line-height: 10vw;
  
 
@@ -105,7 +106,7 @@ animation: animacion 15s linear infinite;
   width: 250px;
   height: 60px;
   border-radius: 30px;
-  padding-bottom: 3.5%;
+  padding-bottom: 3.9%;
   border-style: none;
   font-size:7vw;
   text-align:center;
